--- a/dokumenti/o_meni.html
+++ b/dokumenti/o_meni.html
@@ -35,7 +35,7 @@
 
     <h2>Moji radovi</h2>
 <div>
-    <img src="../slike/ja1.jpg" alt="Ja 1" />
+    <img src="../slike/ja1.png" alt="Ja 1" />
     <img src="../slike/ja2.jpg" alt="Ja 2" />
    <img src="../slike/ja3.jpg" alt="Ja 3" />
  <img src="../slike/ja4.jpg" alt="Ja 4" />
