--- a/dokumenti/o_meni.html
+++ b/dokumenti/o_meni.html
@@ -35,15 +35,15 @@
 
     <h2>Moji radovi</h2>
 <div>
-    <img src="../slike/ja1.png" alt="Ja 1" />
-    <img src="../slike/ja2.jpg" alt="Ja 2" />
-   <img src="../slike/ja3.jpg" alt="Ja 3" />
- <img src="../slike/ja4.jpg" alt="Ja 4" />
+    <img src="../slike/ja1.jpeg" alt="Ja 1" />
+    <img src="../slike/ja2.jpeg" alt="Ja 2" />
+   <img src="../slike/ja3.jpeg" alt="Ja 3" />
+ <img src="../slike/ja4.jpeg" alt="Ja 4" />
 </div>
 
 <div style="margin-top: 20px;">
-    <img src="../slike/14.jpg" alt="Ja 1" />
-    <img src="../slike/15.jpg" alt="Ja 1" />
+    <img src="../slike/14.jpeg" alt="Ja 1" />
+    <img src="../slike/15.jpeg" alt="Ja 1" />
 
     <h2>YouTube video</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/eEWRbpDu6CU?si=4hxqSoymetTKwRjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
