--- a/dokumenti/o_meni.html
+++ b/dokumenti/o_meni.html
@@ -3,7 +3,7 @@
 <html lang="hr">
 <head>
     <meta charset="UTF-8">
-    <title>Multimedija</title>
+    <title>O meni</title>
     <link rel="stylesheet" href="../stil.css">
 </head>
 <body>
